// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute trueusd endpoint should return 502 when field dne 1`] = `
{
  "errorMessage": "Value for 'invalidField' is not a number.",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute trueusd endpoint should return 502 when ripcord: true 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Details1, Details2",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1706162197155,
  },
}
`;

exports[`execute trueusd endpoint should return success 1`] = `
{
  "data": {
    "result": 1888313215.57,
  },
  "result": 1888313215.57,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1706162197155,
  },
}
`;
